# bevy_fmod_simple

./: Cargo.toml  README.md  build.rs  run_demo.sh  rustfmt.toml
assets/: CREDITS
examples/: demo.rs
fmod/lib/x64_linux/: libfmodL.so.13.5
src/: bridge.rs  lib.rs  plugin.rs
src-cpp/: bridge.cpp  bridge.h
