[package]
name = "bevy_fmod_simple"
version = "0.1.2"
edition = "2021"

[dependencies]
bevy = { version = "0.11", default-features = false, features = ["bevy_asset"] }
cxx = "1.0"

lazy_static = "1.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
cxx-build = "1.0"
