[package]
name = "bevy_fmod_simple"
version = "0.1.3"
edition = "2021"

[features]
# Enable playback parameters randomization functions
randomize = ["rand"]

# Serialization for all configuration resources and components
serialize = ["serde"]

[dependencies]
bevy = { version = "0.13", default-features = false, features = ["bevy_asset"] }
cxx = "1.0"

lazy_static = "1.4"
rand = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
bevy = { version = "0.13", default-features = false, features = [
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "multi-threaded",
  "x11",
] }
bevy_egui = { version = "0.27", default-features = false, features = ["default_fonts", "render"] }

[[example]]
name = "demo"
